tests/misc_dir/external_checker/ExtCheck.lean.out.expected
ExtCheck.lean:5:4: error: (kernel) rejected by reject-all external checker
